--- a/about.html
+++ b/about.html
@@ -19,20 +19,30 @@
 <div class="container">
   <h1>เกี่ยวกับเว็บไซต์</h1>
 
+  <h2>วัตถุประสงค์</h2>
   <p>
-    เว็บไซต์นี้เป็นส่วนหนึ่งของรายวิชาการพัฒนาเว็บไซต์
-    จัดทำขึ้นเพื่อศึกษาโครงสร้างและการตกแต่งเว็บด้วย HTML และ CSS
+    เพื่อศึกษาและทำความเข้าใจการพัฒนาเว็บไซต์ด้วย HTML และ CSS
   </p>
 
+  <h2>ประโยชน์ที่ได้รับ</h2>
+  <ul>
+    <li>เข้าใจโครงสร้างเว็บไซต์</li>
+    <li>สามารถสร้างเว็บหลายหน้า</li>
+    <li>รู้จักการตกแต่งเว็บอย่างถูกต้อง</li>
+  </ul>
+
+  <h2>สรุป</h2>
   <p>
-    ผู้จัดทำได้เรียนรู้การสร้างเว็บหลายหน้า
-    การเชื่อมโยงลิงก์ และการแยกไฟล์ CSS เพื่อความเป็นระเบียบ
+    HTML และ CSS เป็นพื้นฐานสำคัญของการพัฒนาเว็บไซต์
+    หากมีความเข้าใจที่ดี จะสามารถต่อยอดไปสู่ JavaScript
+    และการพัฒนาเว็บขั้นสูงได้
   </p>
 </div>
 
 
+
 <footer>
-  <p>ผู้จัดทำ: นักเรียน</p>
+  <p>ผู้จัดทำ: 67026023</p>
 </footer>
 
 </body>
