--- a/css.html
+++ b/css.html
@@ -65,6 +65,58 @@ p {
 &lt;link rel="stylesheet" href="style.css"&gt;
   </pre>
 </div>
+<div class="container">
+  <h1>CSS (Cascading Style Sheets)</h1>
+
+  <h2>ความหมายของ CSS</h2>
+  <p>
+    CSS เป็นภาษาที่ใช้กำหนดรูปแบบและความสวยงามของเว็บไซต์
+    โดยสามารถแยกออกจาก HTML เพื่อความเป็นระเบียบ
+  </p>
+
+  <h2>รูปแบบการเขียน CSS</h2>
+  <pre>
+selector {
+  property: value;
+}
+  </pre>
+
+  <h2>ตัวอย่างการตกแต่งพื้นฐาน</h2>
+  <pre>
+body {
+  background-color: #f4f6f8;
+  font-family: Arial;
+}
+  </pre>
+
+  <h2>การจัด Layout ด้วย Flexbox</h2>
+  <pre>
+.container {
+  display: flex;
+  justify-content: center;
+}
+  </pre>
+
+  <h2>Responsive Design</h2>
+  <p>
+    Responsive Design คือการออกแบบเว็บไซต์ให้แสดงผลได้ดี
+    ทั้งบนคอมพิวเตอร์ แท็บเล็ต และโทรศัพท์มือถือ
+  </p>
+
+  <pre>
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
+}
+  </pre>
+
+  <h2>ตารางเปรียบเทียบ HTML และ CSS</h2>
+  <pre>
+HTML : โครงสร้างเว็บไซต์
+CSS  : ความสวยงามเว็บไซต์
+  </pre>
+</div>
 
 <footer>
   <p>หน้า CSS</p>
