--- a/html.html
+++ b/html.html
@@ -61,6 +61,69 @@
 &lt;a href="https://www.google.com"&gt;ไป Google&lt;/a&gt;
   </pre>
 </div>
+<div class="container">
+  <h1>HTML (HyperText Markup Language)</h1>
+
+  <h2>ความหมายของ HTML</h2>
+  <p>
+    HTML เป็นภาษามาร์กอัปที่ใช้กำหนดโครงสร้างของเว็บไซต์
+    โดยใช้แท็ก (Tag) ในการระบุองค์ประกอบต่าง ๆ
+  </p>
+
+  <h2>โครงสร้างพื้นฐานของ HTML</h2>
+  <pre>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="th"&gt;
+  &lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;My Web&lt;/title&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    เนื้อหาเว็บไซต์
+  &lt;/body&gt;
+&lt;/html&gt;
+  </pre>
+
+  <h2>ประเภทของแท็ก HTML</h2>
+  <ul>
+    <li>แท็กโครงสร้าง เช่น html, head, body</li>
+    <li>แท็กข้อความ เช่น h1, p, span</li>
+    <li>แท็กลิงก์และสื่อ เช่น a, img</li>
+    <li>แท็กจัดกลุ่ม เช่น div, section</li>
+  </ul>
+
+  <h2>การสร้างลิงก์</h2>
+  <pre>
+&lt;a href="page.html"&gt;ไปหน้าอื่น&lt;/a&gt;
+  </pre>
+
+  <h2>การแสดงรูปภาพ</h2>
+  <pre>
+&lt;img src="image.jpg" alt="รูปตัวอย่าง"&gt;
+  </pre>
+
+  <h2>การสร้างตาราง</h2>
+  <pre>
+&lt;table border="1"&gt;
+  &lt;tr&gt;
+    &lt;th&gt;ชื่อ&lt;/th&gt;
+    &lt;th&gt;อายุ&lt;/th&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;สมชาย&lt;/td&gt;
+    &lt;td&gt;18&lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/table&gt;
+  </pre>
+
+  <h2>การสร้างฟอร์ม</h2>
+  <pre>
+&lt;form&gt;
+  &lt;input type="text" placeholder="ชื่อ"&gt;
+  &lt;input type="submit"&gt;
+&lt;/form&gt;
+  </pre>
+</div>
 
 <footer>
   <p>หน้า HTML</p>
