--- a/index.html
+++ b/index.html
@@ -19,19 +19,33 @@
 <div class="container">
   <h1>เว็บไซต์เรียนรู้ HTML และ CSS</h1>
 
+  <h2>บทนำ</h2>
   <p>
-    เว็บไซต์นี้จัดทำขึ้นเพื่อใช้ศึกษาและเรียนรู้การสร้างเว็บไซต์เบื้องต้น
-    โดยใช้ภาษา HTML และ CSS ซึ่งเป็นพื้นฐานสำคัญของการพัฒนาเว็บ
+    ในปัจจุบันเว็บไซต์มีบทบาทสำคัญอย่างมากต่อการสื่อสาร การศึกษา
+    และการดำเนินธุรกิจ การเรียนรู้การสร้างเว็บไซต์จึงเป็นทักษะพื้นฐาน
+    ที่จำเป็นสำหรับนักเรียนและผู้ที่สนใจด้านเทคโนโลยีสารสนเทศ
   </p>
 
-  <h2>เนื้อหาภายในเว็บไซต์</h2>
+  <p>
+    เว็บไซต์นี้จัดทำขึ้นเพื่ออธิบายพื้นฐานการเขียนภาษา HTML และ CSS
+    ซึ่งเป็นภาษาหลักที่ใช้ในการพัฒนาเว็บไซต์
+  </p>
+
+  <h2>ขอบเขตเนื้อหา</h2>
   <ul>
-    <li>ความรู้พื้นฐานเกี่ยวกับ HTML</li>
-    <li>ความรู้พื้นฐานเกี่ยวกับ CSS</li>
-    <li>ตัวอย่างโค้ดจริง</li>
-    <li>โครงสร้างเว็บไซต์หลายหน้า</li>
+    <li>ความหมายและโครงสร้างของ HTML</li>
+    <li>การใช้แท็ก HTML ที่สำคัญ</li>
+    <li>การตกแต่งเว็บไซต์ด้วย CSS</li>
+    <li>การสร้างเว็บหลายหน้า</li>
   </ul>
+
+  <h2>ประโยชน์ที่ได้รับ</h2>
+  <p>
+    ผู้ศึกษาเว็บไซต์นี้จะสามารถเข้าใจหลักการสร้างเว็บไซต์เบื้องต้น
+    และสามารถนำความรู้ไปต่อยอดในการพัฒนาเว็บไซต์ที่ซับซ้อนมากขึ้น
+  </p>
 </div>
+
 
 
 <footer>
