--- a/html.html
+++ b/html.html
@@ -12,6 +12,7 @@
     <a href="index.html">หน้าแรก</a>
     <a href="html.html">HTML</a>
     <a href="css.html">CSS</a>
+    <a href="js.html">JavaScript</a>
     <a href="about.html">เกี่ยวกับ</a>
   </nav>
 </header>
@@ -123,6 +124,41 @@
   &lt;input type="submit"&gt;
 &lt;/form&gt;
   </pre>
+</div>
+<div class="card">
+  <h2>Semantic HTML คืออะไร</h2>
+  <p>
+    Semantic HTML คือการใช้แท็ก HTML ที่มีความหมายชัดเจน
+    เพื่อบอกโครงสร้างและหน้าที่ของเนื้อหาในเว็บไซต์
+    ช่วยให้โค้ดอ่านง่าย และเป็นมิตรกับ SEO และ Screen Reader
+  </p>
+
+  <h2>ตัวอย่าง Semantic HTML</h2>
+  <pre>
+&lt;header&gt;
+  &lt;nav&gt;เมนูเว็บไซต์&lt;/nav&gt;
+&lt;/header&gt;
+
+&lt;main&gt;
+  &lt;section&gt;
+    &lt;article&gt;
+      &lt;h1&gt;หัวข้อบทความ&lt;/h1&gt;
+      &lt;p&gt;เนื้อหา&lt;/p&gt;
+    &lt;/article&gt;
+  &lt;/section&gt;
+&lt;/main&gt;
+
+&lt;footer&gt;
+  ลิขสิทธิ์เว็บไซต์
+&lt;/footer&gt;
+  </pre>
+
+  <h2>ข้อดีของ Semantic HTML</h2>
+  <ul>
+    <li>โค้ดเป็นระเบียบ อ่านง่าย</li>
+    <li>ช่วยให้ Search Engine เข้าใจเนื้อหา</li>
+    <li>รองรับผู้พิการทางสายตา</li>
+  </ul>
 </div>
 
 <footer>
