--- a/css.html
+++ b/css.html
@@ -12,6 +12,7 @@
     <a href="index.html">หน้าแรก</a>
     <a href="html.html">HTML</a>
     <a href="css.html">CSS</a>
+    <a href="js.html">JavaScript</a>
     <a href="about.html">เกี่ยวกับ</a>
   </nav>
 </header>
